--- a/src/static/style.css
+++ b/src/static/style.css
@@ -226,3 +226,18 @@ main {
     outline: none;
     border-bottom: 1px solid var(--blue);
 }
+
+#profile-options{
+    display: flex;
+    background-color: var(--white);
+    flex-direction: column;
+    overflow:hidden;
+    max-height: 0;
+    transition: max-height 0.1s ease-in-out;
+    z-index: 1000;
+}
+
+dialog{
+    border: 0;
+    border-radius: 10px;
+}
