--- a/src/templates/user/user.html
+++ b/src/templates/user/user.html
@@ -47,6 +47,9 @@
             <div class="table-empty table-row hide">
                 <div>No users found.</div>
             </div>
+            <div class="table-error table-row hide">
+                <div>Error loading users.</div>
+            </div>
         </div>
     </div>
 </div>
