Initial fix on removing user

--- a/src/templates/user/remove.html
+++ b/src/templates/user/remove.html
@@ -30,6 +30,9 @@
             <div class="table-row table-empty hide">
                 <div>No users found.</div>
             </div>
+            <div class="table-error table-row hide">
+                <div>Error loading users.</div>
+            </div>
         </div>
     </div>
 </div>
