--- a/src/templates/login.html
+++ b/src/templates/login.html
@@ -17,7 +17,7 @@
 
             <div id="login-right">
                 <form id="login-form" method="post">
-                    <input id="login-username" type="text" class="field" placeholder="Username" name="uname" required autofocus>
+                    <input id="login-username" type="text" class="field" placeholder="Username or email" name="uname" required autofocus>
                     <input id="login-password" type="password" class="field" placeholder="Password" name="pword" required>
                     <span>
                         <input type="submit" id="login-submit" value="Log in">
@@ -26,7 +26,193 @@
                         {% endif %}
                     </span>
                 </form>
+                <button id="forgotpw">Forgot password</button>
             </div>
         </main>
+
+        <dialog id="new-pw" style="height:400px; width:800px">
+            <div id="step1">
+                <label for="email">Enter your email:</label>
+                <input type="email" id="email" name="email" style="width:300px; padding: 5px; margin-left:10px; margin-right: 10px;" required autofocus>
+                <br>
+                <form id="email-form">
+                    <input type="submit" value="Submit" id="submit">
+                </form>
+                <p id="step1-message" style="display:none"></p>
+            </div>
+            <div id="step2">
+                <label for="code">Enter code sent to <span id="email-add"></span>:</label>
+                <input type="text" id="code" name="code" style="width:300px; padding: 5px; margin-left:10px; margin-right: 10px;" required autofocus>
+                <br>
+                <form id="code-form">
+                    <input type="submit" value="Submit" id="submit">
+                </form>
+                <input type="button" value="Resend code" id="resend">
+                <p id="step2-message" style="display:none"></p>
+            </div>
+            <div id="step3">
+                <label for="new-password">Enter new password:</label>
+                <input type="password" id="new-password" name="new-password" pattern="(?=.*[a-zA-Z0-9]).{8,12}" style="width:300px; padding: 5px; margin-left:10px; margin-right: 10px;" required>
+                <br>
+                <label for="new-password2">Enter new password again:</label>
+                <input type="password" id="new-password2" name="new-password2" style="width:300px; padding: 5px; margin-left:10px; margin-right: 10px;" required>
+                <form id="changepw">
+                    <input type="submit" value="Submit" id="submit" disabled>
+                </form>
+                <p id="step3-message" style="display:none"></p>
+            </div>
+            <div id="step4">
+                <p>Password reset successfully</p>
+            </div>
+        </dialog>
     </body>
 </html>
+
+<script>
+    document.querySelector('#forgotpw').addEventListener('click', () => {
+        // Hide other sections
+        document.querySelector('#step1').style.display = "block"
+        document.querySelector('#step2').style.display = "none"
+        document.querySelector('#step3').style.display = "none"
+        document.querySelector('#step4').style.display = "none"
+
+        // Clear forms
+        document.querySelectorAll('#new-pw input[type=password], input[type=text], input[type=email]').forEach(x => {
+            x.value = '';
+        });
+        document.querySelector('#step3 #submit').disabled = 1;
+
+        // Display dialog
+        document.querySelector('#new-pw').showModal();
+    });
+
+    // STEP 1
+    document.querySelector("#email-form").addEventListener("submit", e => {
+        e.preventDefault();
+
+        fetch("{{ url_for('bp_user.check_email') }}", {
+            "method": "POST",
+            "headers": {
+                "Content-Type": "application/json"
+            },
+            "body": JSON.stringify({ "email": document.querySelector('#email').value })
+        }).then(d => {
+            if (d.status === 200){
+                document.querySelector('#step1').style.display = 'none';
+                document.querySelector('#step2').style.display = 'block';
+
+                document.querySelector('#email-add').innerHTML = document.querySelector('#email').value
+                document.querySelector('#code').focus();
+            }
+
+            if (d.status === 304){
+                document.querySelector('#email').value = '';
+
+                let m = document.querySelector('#step1-message');
+                m.innerHTML = "Invalid email";
+                m.style.display = "block";
+
+                let n = document.querySelector('#email');
+                n.style.borderColor = 'red'
+            }
+
+            if (d.status === 500){
+                let m = document.querySelector('#step1-message');
+                m.innerHTML = "An error occured. Please try again.";
+                m.style.display = "block";
+            }
+        });
+    });
+
+    // STEP 2
+    document.querySelector("#code-form").addEventListener("submit", e => {
+        e.preventDefault();
+
+        fetch("{{ url_for('bp_user.check_code') }}", {
+            "method": "POST",
+            "headers": {
+                "Content-Type": "application/json"
+            },
+            "body": JSON.stringify({ "code": document.querySelector('#code').value })
+        }).then(d => {
+            if (d.status === 200){
+                document.querySelector('#step2').style.display = 'none';
+                document.querySelector('#step3').style.display = 'block';
+                document.querySelector('#new-password').focus();
+            }
+
+            if (d.status === 304){
+                document.querySelector('#code').value = '';
+
+                let m = document.querySelector('#step2-message');
+                m.innerHTML = "Invalid code";
+                m.style.display = "block";
+
+                let n = document.querySelector('#code');
+                n.style.borderBottomColor = 'red'
+            }
+
+            if (d.status === 500){
+                let m = document.querySelector('#step2-message');
+                m.innerHTML = "An error occured. Please try again.";
+                m.style.display = "block";
+            }
+        });
+    });
+
+    document.querySelector('#resend').addEventListener('click', () => {
+        fetch("{{ url_for('bp_user.generate_code') }}", {
+            "method": "POST"
+        }).then(() => {
+            document.querySelector('#code').value = '';
+
+            let m = document.querySelector('#step2-message');
+            m.innerHTML = "Code sent";
+            m.style.display = "block";
+        });
+    })
+
+    // STEP 3
+    // TODO: Wait for response
+    document.querySelectorAll('#step3 input[type=password]').forEach(x => {x.addEventListener('keyup', e => {
+        let submit = document.querySelector('#step3 #submit')
+        submit.disabled = !(isValidPassword() && equalPassword());
+    })})
+
+    function isValidPassword(){
+        let a = document.querySelector('#new-password');
+        let format = /^(?=.*[a-zA-Z0-9]).{8,12}$/g
+        return a.value.match(format)
+    }
+
+    function equalPassword(){
+        let a = document.querySelector('#new-password');
+        let b = document.querySelector('#new-password2');
+        return a.value === b.value;
+    }
+
+    document.querySelector("#changepw").addEventListener("submit", e => {
+        e.preventDefault();
+
+        fetch("{{ url_for('bp_user.change_password2') }}", {
+            "method": "POST",
+            "headers": {
+                "Content-Type": "application/json"
+            },
+            "body": JSON.stringify({ "password": document.querySelector('#new-password').value, "email": document.querySelector('#email').value })
+        }).then(d => {
+            if (d.status === 200){
+                document.querySelector('#step3').style.display = 'none';
+                document.querySelector('#step4').style.display = 'block';
+            }
+
+            if (d.status === 500){
+                let m = document.querySelector('#step3-message');
+                m.innerHTML = "An error occured. Please try again.";
+                m.style.display = "block";
+            }
+        });
+    });
+
+    // STEP 4
+</script>
