--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -8,12 +8,16 @@
         <link rel="stylesheet" href="{{ url_for('static', filename = 'style_table.css') }}">
         <link rel="stylesheet" href="{{ url_for('static', filename = 'style_inventory.css') }}">
         <link rel="stylesheet" href="{{ url_for('static', filename = 'style_request.css') }}">
+        <link rel="stylesheet" href="{{ url_for('static', filename = 'style_dialog.css') }}">
         <script src="{{ url_for('static', filename = 'script_table.js') }}"></script>
     </head>
 
     <body>
         <header>
-            <a href = "{{ url_for('index') }}" style="text-decoration: none;"><h1 id="title"><span>s</span>IMS</h1></a>
+            <a href = "{{ url_for('index') }}" style="text-decoration: none; cursor: pointer;">
+                <h1 id="title"><span>s</span>IMS</h1>
+            </a>
+
             <div id="profile">
                 <p class="info" id="profile-name">{{ session['user']['FirstName'] }} {{ session['user']['LastName'] }}</p>
                 <p class="info" id="profile-role">{{ session['user']['RoleName'] }}</p>
@@ -23,38 +27,88 @@
                     <p>Change email address</p>
                 </div>
             </div>
-            <dialog id="passwordchange">
+
+            <dialog id="change-password-dialog">
                 <div id="step1">
-                    <label for="old-password">Enter old password:</label>
-                    <input type="password" id="old-password" name="old-password" style="width:300px; padding: 5px; margin-left:10px; margin-right: 10px;" required autofocus>
-                    <form id="changepw">
-                        <input type="submit" value="Submit" >
+                    <h1>Verify user</h1>
+
+                    <div>
+                        <label for="old-password">Enter old password:</label>
+                        <br>
+                        <input type="password" id="old-password" name="old-password" autofocus>
+                        <p class='message' id="step1-message"></p>
+                    </div>
+                    
+                    <form id="old-password-form">
+                        <input type="submit" value="Submit" disabled>
                     </form>
                 </div>
 
-                <div id="step2" style="display:none">
-                    <form id="changepw" action="{{ url_for('bp_user.change_password') }}" method="post">
+                <div id="step2">
+                    <h1>Reset password</h1>
+    
+                    <div>
+                        <p>Password must have <em><b>8 to 12 alphanumeric characters</b></em>.</p>
                         <label for="new-password">Enter new password:</label>
-                        <input type="password" id="new-password" name="new-password" pattern="(?=.*[a-zA-Z0-9]).{8,12}" style="width:300px; padding: 5px; margin-left:10px; margin-right: 10px;" required>
+                        <div style="height: 20%">
+                            <input type="password" id="new-password" name="new-password" pattern="(?=.*[a-zA-Z0-9]).{8,12}" required>
+                        </div>
                         <br>
-                        <label for="new-password2">Enter new password again:</label>
-                        <input type="password" id="new-password2" name="new-password2" style="width:300px; padding: 5px; margin-left:10px; margin-right: 10px;" required>
-                        <br>
+    
+                        <label for="new-password2" style="margin-top: 20px">Enter new password again:</label>
+                        <div>
+                            <input type="password" id="new-password2" name="new-password2" required>
+                        </div>
+                        <p class='message' id="step2-message"></p>
+                    </div>
+    
+                    <form id="password-form">
                         <input type="submit" value="Submit" id="submit" disabled>
                     </form>
                 </div>
+
+                <div id="step3">
+                    <div class="password-reset-success">
+                        <h1 style="text-align: center;">Password reset successfully &#127881;</h1>
+                        <form method="dialog">
+                            <input type="submit" value="Close">
+                        </form>
+                    </div>
+                </div>
             </dialog>
 
-            <dialog id="email-form">
-                <label for="old-password2">Enter your password:</label>
-                <input type="password" id="old-password2" name="old-password" style="width:300px; padding: 5px; margin-left:10px; margin-right: 10px;" required autofocus>
-                <br>
-                <label for="new-password">Enter new email address:</label>
-                <input type="email" id="new-email" name="new-email" placeholder="{{ '' if  session['user']['Email'] is none else session['user']['Email'] }}" maxlength="50" title="Email address must have a gmail.com domain">
-                <form id='changemail'>
-                    <input type="submit" value="Submit" id="submit" disabled>
-                </form>
-                <p style="display:none"></p>
+            <dialog id="change-email-dialog">
+                <div id="step1">
+                    <h1>Change email</h1>
+                    <p>Email must have a <em><b>gmail.com</b></em> domain.</p>
+
+                    <div>
+                        <label for="old-password2">Enter your password:</label>
+                        <br>
+                        <input type="password" id="old-password2" name="old-password" autofocus>
+                        <p class='message' id="step3-message"></p>
+                    </div>
+
+                    <div style="margin-top: 20px; height: 45%;">
+                        <label for="new-email">Enter new email address:</label>
+                        <br>
+                        <input type="email" id="new-email" name="new-email" placeholder="{{ '' if  session['user']['Email'] is none else session['user']['Email'] }}" maxlength="50" title="Email address must have a gmail.com domain">
+                        <p class='message' id="step3-message"></p>
+                    </div>
+                    
+                    <form id='new-email-form' style="align-self: flex-end;">
+                        <input type="submit" value="Submit" id="submit" disabled>
+                    </form>
+                </div>
+
+                <div id="step2">
+                    <div class="password-reset-success">
+                        <h1 style="text-align: center;">Email changed successfully &#127881;</h1>
+                        <form method="dialog">
+                            <input type="submit" value="Close">
+                        </form>
+                    </div>
+                </div>
             </dialog>
         </header>
 
@@ -98,11 +152,28 @@
         } 
     });
 
+    // CHANGE PASSWORD DIALOG
     document.querySelector('#profile-options p').addEventListener('click', () => {
-        document.querySelector('#passwordchange').showModal();
+        document.querySelector('#change-password-dialog #step1').style.display = 'block'
+
+        document.querySelectorAll('#change-password-dialog input[type=text], #change-password-dialog input[type=password], #change-password-dialog input[type=email]').forEach(
+            x => {x.value = ''}
+        )
+
+        document.querySelector('#change-password-dialog').showModal();
     });
 
-    document.querySelector("#changepw").addEventListener("submit", e => {
+    document.querySelector('#change-password-dialog').addEventListener('close', () => {
+        location.reload();
+    });
+
+    // Step 1
+    let submit_password = document.querySelector('#old-password-form input[type=submit]');
+    document.querySelector('#old-password').addEventListener('keyup', (e) => {
+        submit_password.disabled = e.target.value.length === 0
+    })
+
+    document.querySelector("#old-password-form").addEventListener("submit", e => {
         e.preventDefault();
 
         fetch("{{ url_for('bp_user.check_password') }}", {
@@ -113,10 +184,6 @@
             "body": JSON.stringify({ "values": document.querySelector('#old-password').value })
         }).then(d => {
             if (d.status === 200){
-                if(document.querySelector('#passwordchange').childElementCount == 3){
-                    let a = document.querySelector('#passwordchange').lastChild
-                    document.querySelector('#passwordchange').removeChild(a)
-                }
                 document.querySelector('#step1').style.display = 'none';
                 document.querySelector('#step2').style.display = 'block';
 
@@ -126,20 +193,20 @@
             if (d.status === 304){
                 document.querySelector('#old-password').value = '';
 
-                if(document.querySelector('#passwordchange').childElementCount == 2){
-                    let a = document.createElement('p');
-                    a.innerHTML = "Invalid password"
-                    document.querySelector('#passwordchange').append(a)
-                }
+                let m = document.querySelector('#step1-message');
+                m.innerHTML = "Wrong password";
+                m.style.display = "block";
+                m.style.color = 'red'
+
+                let n = document.querySelector('#old-password');
+                n.style.borderColor = 'red'
             }
+
+            document.querySelector('#old-password-form input[type=submit]').disabled = 1;
         });
     });
 
-    document.querySelectorAll('#changepw input[type=password]').forEach(x => {x.addEventListener('keyup', e => {
-        let submit = document.querySelector('#step2 #submit')
-        submit.disabled = !(isValidPassword() && equalPassword());
-    })})
-
+    // Step 2
     function isValidPassword(){
         let a = document.querySelector('#new-password');
         let format = /^(?=.*[a-zA-Z0-9]).{8,12}$/g
@@ -149,28 +216,102 @@
     function equalPassword(){
         let a = document.querySelector('#new-password');
         let b = document.querySelector('#new-password2');
-        console.log(a.value)
-        console.log(b.value)
-        return a.value == b.value;
+        return a.value === b.value;
     }
 
-    document.querySelector('#profile-options p ~ p').addEventListener('click', () => {
-        document.querySelector('#email-form').showModal();
-    });
+    document.querySelectorAll('#step2 input[type=password]').forEach(x => {x.addEventListener('keyup', e => {
+        let submit = document.querySelector('#step2 #submit')
+        let isValid = isValidPassword();
+        let isEqual = equalPassword();
 
-    let change_p = document.querySelector('#email-form input[type=submit]');
-    document.querySelector('#new-email').addEventListener("keyup", (e)=>{
-        let p_format = /^\w+([\.\-\+]?\w+)*@gmail\.com/g
-        if(e.target.value.match(p_format)){
-            change_p.disabled = 0;
+        let p = document.querySelector('#new-password');
+        let q = document.querySelector('#new-password2');
+
+        let r = document.querySelector('#step2 > div > div');
+        let s = document.querySelector('#step2 > div > div ~ div')
+        if(isValid){
+            r.classList.add('pvalid');
+            p.style.borderColor = 'green';
+
+            if(isEqual){
+                s.classList.add('pvalid');
+                q.style.borderColor = 'green';
+            }
+            else{
+                s.classList.remove('pvalid');
+                q.style.borderColor = 'var(--gray)';
+            }
         }
         else{
-            change_p.disabled = 1;
+            r.classList.remove('pvalid');
+            s.classList.remove('pvalid');
+
+            p.style.borderColor = 'var(--gray)';
+            q.style.borderColor = 'var(--gray)';
         }
+
+        submit.disabled = !(isEqual && isValid);
+    })})
+
+    document.querySelector("#password-form").addEventListener("submit", e => {
+        e.preventDefault();
+
+        fetch("{{ url_for('bp_user.change_password') }}", {
+            "method": "POST",
+            "headers": {
+                "Content-Type": "application/json"
+            },
+            "body": JSON.stringify({ "password": document.querySelector('#new-password').value })
+        }).then(d => {
+            if (d.status === 200){
+                document.querySelector('#step2').style.display = 'none';
+                document.querySelector('#step3').style.display = 'block';
+            }
+
+            if (d.status === 500){
+                let m = document.querySelector('#step2-message');
+                m.innerHTML = "An error occured. Please try again.";
+                m.style.color = "red"
+                m.style.display = "block";
+            }
+
+            document.querySelector('#password-form input[type=submit]').disabled = 1;
+        });
+    });
+
+    // CHANGE EMAIL DIALOG
+
+    document.querySelector('#profile-options p ~ p').addEventListener('click', () => {
+        document.querySelector('#change-email-dialog #step1').style.display = 'block'
+
+        document.querySelectorAll('#change-email-dialog input[type=password], #change-email-dialog input[type=email]').forEach(
+            x => {x.value = ''}
+        )
+
+        document.querySelector('#change-email-dialog').showModal();
+    });
+
+    document.querySelector('#change-email-dialog').addEventListener('close', () => {
+        location.reload();
+    });
+
+    function isValidEmail(){
+        let email = document.querySelector('#new-email');
+        let format = /^\w+([\.\-\+]?\w+)*@gmail\.com/g;
+        return email.value.match(format);
+    }
+
+    function notEmpty(){
+        let password = document.querySelector('#old-password2');
+        return password.value.length > 0
+    }
+
+    let submit_email = document.querySelector('#change-email-dialog input[type=submit]');
+    document.querySelector('#change-email-dialog #step1').addEventListener("keyup", (e)=>{
+        submit_email.disabled = !(isValidEmail() && notEmpty())
     })
 
-    //TODO: Edit submit button
-    document.querySelector('#changemail').addEventListener('submit', (e) => {
+    document.querySelector('#new-email-form').addEventListener('submit', (e) => {
         e.preventDefault();
 
         fetch("{{ url_for('bp_user.change_email') }}", {
@@ -181,7 +322,8 @@
             "body": JSON.stringify({ "password": document.querySelector('#old-password2').value, "email": document.querySelector('#new-email').value })
         }).then(d => {
             if (d.status === 200){
-                document.querySelector('#email-form').close();
+                document.querySelector('#change-email-dialog #step1').style.display = 'none';
+                document.querySelector('#change-email-dialog #step2').style.display = 'block';
             }
 
             if (d.status === 304){
@@ -190,11 +332,13 @@
                 document.querySelector('#old-password2').focus();
                 document.querySelector('#new-email').value = '';
 
-                let a = document.querySelector('#email-form p');
-                a.style.display = "block";
-                a.innerHTML = "Invalid password"
+                let m = document.querySelector('#step3-message');
+                m.innerHTML = "Wrong password";
+                m.style.color = "red"
+                m.style.display = "block";
 
-                document.querySelector('#changemail input[type=submit]').disabled = 1;
+                let n = document.querySelector('#old-password2');
+                n.style.borderColor = 'red'
             }
 
             if (d.status === 500){
@@ -203,12 +347,13 @@
                 document.querySelector('#old-password2').focus();
                 document.querySelector('#new-email').value = '';
 
-                let a = document.querySelector('#email-form p');
-                a.style.display = "block";
-                a.innerHTML = "Email already used"
-
-                document.querySelector('#changemail input[type=submit]').disabled = 1;
+                let m = document.querySelector('#step3-message');
+                m.innerHTML = "An error occured. Please try again.";
+                m.style.color = "red"
+                m.style.display = "block";
             }
+
+            document.querySelector('#new-email-form input[type=submit]').disabled = 1;
         });
     });
 </script>
