Fix layout on profile icon

--- a/src/static/style.css
+++ b/src/static/style.css
@@ -228,11 +228,34 @@ main {
 }
 
 #profile-options{
-    display: flex;
-    background-color: var(--white);
+    display: none;
     flex-direction: column;
-    overflow:hidden;
+    position: absolute;
+    margin: 0px;
+    right: 0px;
+
+    width: 200px;
     max-height: 0;
+    padding: 8px;
+
+    background-color: var(--white);
+    border: 1px solid var(--gray);
+    border-radius: 20px;
+    box-shadow: 0rem 0.2rem 0.4rem var(--btn-shadow);;
+    
+    overflow:hidden;
     transition: max-height 0.1s ease-in-out;
     z-index: 1000;
+}
+
+#profile-options p{
+    border-radius: 10px;
+    padding: 7px;
+    
+    text-align: left;
+    font-weight: lighter;
+}
+
+#profile-options p:hover{
+    background: var(--light-gray);
 }
