--- a/src/static/style.css
+++ b/src/static/style.css
@@ -259,3 +259,10 @@ main {
 #profile-options p:hover{
     background: var(--light-gray);
 }
+
+#add-user-form{
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
+    justify-content: flex-end;
+}
