Resend code only ONCE

--- a/src/templates/login.html
+++ b/src/templates/login.html
@@ -215,6 +215,8 @@
             m.innerHTML = "Code sent";
             m.style.color = "black"
             m.style.display = "block";
+
+            document.querySelector('#resend').disabled = 1;
         });
     })
 
